--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+$blue: #3599db;
+
+ul li{
+  display: inline;
+  background-color: $blue;
+  color: rgb(255, 255, 255);
+  padding: 16px;
+  margin: 8px;
+  box-shadow: 1px 1px 5px grey;
+}
+
+.container {
+  margin: 16px;
+  padding: 16px;
+}
+
+p {
+  margin: 16px;
+}
